AP-25455: Add and export `org.knime.core.util.proxy.testing` package
* Dedicated package for JUnit 5 testing utilities for proxy tests contexts.
* Improved sidecar configuration in Jenkinsfile, and Java accessors.
* Moved proxy integration tests with Apache HC4 and HC5 to knime-rest.

AP-25455 (Replace manually-created Apache HttpClients by our ProxyHttpClients factory)